fixed spacing issue

--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ body {
   background: black;
   cursor: grab;
   pointer-events: all;
+  width: 200vw;
+  height: 200vh;
 }
 
 body:active {
@@ -96,11 +98,7 @@ body:active {
   opacity: 0;
   animation: fadeIn 1.5s ease forwards;
   animation-delay: 2s;
-}
-
-.arrows {
-  height: 100vh;
-  width: 100vw;
+  z-index: 5;
 }
 
 .up, .down, .left, .right {
@@ -208,8 +206,8 @@ body:active {
 
 #map {
   padding-top: 1vh;
-  width: 200vw;
-  height: 200vh;
+  width: 100%;
+  height: 100%;
 }
 
 @keyframes dash {
